--- a/kurikunhomepage.html
+++ b/kurikunhomepage.html
@@ -1,1 +1,21 @@
-<center><h1>くりくんのホームページ</center></h1>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Twitter埋め込み</title>
+</head>
+<body>
+
+    <h2>特定のツイートを表示</h2>
+
+    <!-- ここに埋め込みコードを貼り付け -->
+    <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">Check out this tweet! <a href="https://twitter.com/username/status/tweetID">https://twitter.com/username/status/tweetID</a></p>&mdash; User (@username) <a href="https://twitter.com/username/status/tweetID">Date</a>
+    </blockquote>
+    
+    <!-- TwitterのウィジェットJSを読み込む -->
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+</body>
+</html>
