--- a/kurikunhomepage.html
+++ b/kurikunhomepage.html
@@ -3,19 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Twitter埋め込み</title>
+    <title>ツイート画像表示</title>
 </head>
 <body>
 
-    <h2>特定のツイートを表示</h2>
+    <h2>ツイートIDを入力して画像を表示</h2>
+    <input type="text" id="tweetID" placeholder="ツイートIDを入力">
+    <button onclick="fetchTweetImage()">画像を表示</button>
 
-    <!-- ここに埋め込みコードを貼り付け -->
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">Check out this tweet! <a href="https://twitter.com/username/status/tweetID">https://twitter.com/username/status/tweetID</a></p>&mdash; User (@username) <a href="https://twitter.com/username/status/tweetID">Date</a>
-    </blockquote>
-    
-    <!-- TwitterのウィジェットJSを読み込む -->
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <div id="tweet-image"></div>
+
+    <script>
+        function fetchTweetImage() {
+            const tweetID = document.getElementById('tweetID').value.trim();
+
+            if (tweetID) {
+                fetch(`/getTweetImage.php?tweetID=${tweetID}`)
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data.imageUrl) {
+                            document.getElementById('tweet-image').innerHTML = `<img src="${data.imageUrl}" alt="Tweet Image" />`;
+                        } else {
+                            document.getElementById('tweet-image').innerHTML = 'このツイートには画像が含まれていません。';
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Error fetching tweet image:', error);
+                    });
+            } else {
+                alert('ツイートIDを入力してください');
+            }
+        }
+    </script>
 
 </body>
 </html>
